save to local storage

--- a/index.html
+++ b/index.html
@@ -30,47 +30,47 @@
     </header>
     <div class="container">
       <table id = "table" class="table table-hover">
-        <tr id="nine" value="9"><td id="time">9 AM</td><td id="eventText" class="textHere"></td><td><button id = "btn1" type="button" class="btn btn-primary">
+        <tr id="nine" value="9"><td id="time">9 AM</td><td id = "eventText"><textarea id = "text1"></textarea></td><td><button id = "btn1" type="button" class="btn btn-primary">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-save" viewBox="0 0 16 16">
 <path d="M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1H2z"></path>
 </svg>
         </button></td></tr>
-        <tr id="ten" value = "10"><td id="time">10 AM</td><td id="eventText"  class="textHere"></td><td><button id = "btn2" type="button" class="btn btn-primary">
+        <tr id="ten" value = "10"><td id="time">10 AM</td><td id = "eventText"><textarea id = "text2"></textarea></td><td><button id = "btn2" type="button" class="btn btn-primary">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-save" viewBox="0 0 16 16">
 <path d="M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1H2z"></path>
 </svg>
         </button></td></tr>
-        <tr id="eleven" value = "11"><td id="time">11 AM</td><td id="eventText"  class="textHere"></td><td><button id = "btn3" type="button" class="btn btn-primary">
+        <tr id="eleven" value = "11"><td id="time">11 AM</td><td id = "eventText"><textarea id = "text3"></textarea></td><td><button id = "btn3" type="button" class="btn btn-primary">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-save" viewBox="0 0 16 16">
 <path d="M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1H2z"></path>
 </svg>
         </button></td></tr>
-        <tr id ="twelve" value="12"><td id="time">12 PM</td><td id="eventText"  class="textHere"></td><td><button id = "btn4" type="button" class="btn btn-primary">
+        <tr id ="twelve" value="12"><td id="time">12 PM</td><td id = "eventText"><textarea id = "text4"></textarea></td><td><button id = "btn4" type="button" class="btn btn-primary">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-save" viewBox="0 0 16 16">
 <path d="M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1H2z"></path>
 </svg>
         </button></td></tr>
-        <tr id="one" value = "13"><td id="time">1 PM</td><td id="eventText"  class="textHere"></td><td><button id = "btn5"type="button" class="btn btn-primary">
+        <tr id="one" value = "13"><td id="time">1 PM</td><td id = "eventText"><textarea id = "text5"></textarea></td><td><button id = "btn5"type="button" class="btn btn-primary">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-save" viewBox="0 0 16 16">
 <path d="M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1H2z"></path>
 </svg>
         </button></td></tr>
-        <tr id ="two" value = "14"><td id="time">2 PM</td><td id="eventText"  class="textHere"></td><td><button id = "btn6" type="button" class="btn btn-primary">
+        <tr id ="two" value = "14"><td id="time">2 PM</td><td id = "eventText"><textarea id = "text6"></textarea></td><td><button id = "btn6" type="button" class="btn btn-primary">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-save" viewBox="0 0 16 16">
 <path d="M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1H2z"></path>
 </svg>
         </button></td></tr>
-        <tr id="three" value="15"> <td id="time">3 PM</td><td id="eventText"  class="textHere"></td><td><button id = "btn7" type="button" class="btn btn-primary">
+        <tr id="three" value="15"> <td id="time">3 PM</td><td id = "eventText"><textarea id = "text7"></textarea></td><td><button id = "btn7" type="button" class="btn btn-primary">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-save" viewBox="0 0 16 16">
 <path d="M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1H2z"></path>
 </svg>
         </button></td></tr>
-        <tr id="four" value="16"><td id="time">4 PM</td><td id="eventText"  class="textHere"></td><td><button id = "btn8" type="button" class="btn btn-primary">
+        <tr id="four" value="16"><td id="time">4 PM</td><td id = "eventText"><textarea id = "text8"></textarea></td><td><button id = "btn8" type="button" class="btn btn-primary">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-save" viewBox="0 0 16 16">
 <path d="M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1H2z"></path>
 </svg>
         </button></td></tr>
-        <tr id="five" value="17"><td id="time">5 PM</td><td id="eventText"  class="textHere" width="900px"></td><td><button id = "btn9" type="button" class="btn btn-primary">
+        <tr id="five" value="17"><td id="time">5 PM</td><td id = "eventText" width="900px"><textarea id = "text9"></textarea></td><td><button id = "btn9" type="button" class="btn btn-primary">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-save" viewBox="0 0 16 16">
 <path d="M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1H2z"></path>
 </svg>
